--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1356,6 +1356,8 @@ as required.
 <b>EXERCISE 8:</b>&nbsp;Which is larger $(E(X))^2$ or $E(X^2)?$ Assume
 that both exist finitely.</p>
 
+<p></p>
+
 <h1><a
 name="Indicator trick">Indicator trick</a></h1>
 Often we have to find $E(X)$  where $X$  is the count of something, <i>e.g.</i>, number of heads in 100 tosses of coin,
@@ -1380,9 +1382,10 @@ Often we have to find $E(X)$  where $X$  is the count of something, <i>e.g.</i>,
 
 <p></p>
 <b>SOLUTION:</b>
-Let $X$  be the number of singletons. Finding the distribution of $X$  is not easy. 
+Let $X$  be the number of singletons. Finding the distribution of $X$  is not very difficult, but still we shall
+ demonstrate the use of the indicator trick. 
 <p></p>
-Instead we shall use the arrowheads as our random variables. Let the lamps be numbered from 1 to 20. Define $L_i=1$ 
+We shall use the arrowheads as our random variables. Let the lamps be numbered from 1 to 20. Define $L_i=1$ 
  if $i$-th lamp is on and is a singleton, and $0$  else. In other words, $L_i=1$  means we have put an
  arrow head at position
  $i.$  
@@ -1399,6 +1402,8 @@ To find $E(L_1)$  we need to find just $P(L_1=1)$, which involves only lamp 1 an
 Hence $E(X) = \frac{20}{8} = \frac 52.$  
     ■
 </p>
+
+<p></p>
 
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
