--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1064,7 +1064,11 @@ Thus, $E(U)\leq L,$  as required.
 <p></p>
 $$\forall L'&lt; L~~\exists U\in{\mathcal D}~~E(U)&gt; L'.$$  
 <p></p>
-Let $U_n$  be the random variable $\min\{X,x_n\}.$  Then $U_n$  is a simple random variable such that $U_n\leq X.$ 
+Let $U_n$  be the random variable 
+$$
+U =\left\{\begin{array}{ll}X&\text{if }X=x_1,...,x_n\\ 0&\text{otherwise.}\end{array}\right..
+$$  
+Then $U_n$  is a simple random variable such that $U_n\leq X.$ 
 <p></p>
 So $U_n\in{\mathcal D}.$
 <p></p>
