--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -238,7 +238,7 @@ X(head) &amp; = &amp; 10,\\
 X(tail) &amp; = &amp; -20.
 \end{eqnarray*}$$
 There is nothing random about this <i>function</i>. The randomness comes
-from mechanism that decides what gois <i>into</i> this: head or tail?
+from the mechanism that decides what goes <i>into</i> this: head or tail?
 <p></p>
 We use this idea to define random variables mathematically. We
 start with a random experiment which is the provider of the
