--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -72,13 +72,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,6 +101,7 @@ body {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -210,7 +215,7 @@ Hence $P(Y=1|X=1) = P(X=1,Y=1)/P(X=1) = \frac 67.$
 <p></p>
 You should now be able to work out the other three conditional
 probabilities similarly.
- ///
+ ■
 </p>
 
 <p></p>
@@ -297,7 +302,7 @@ toss.
 Then $E(X|Y=Head) = 3.5$ and $E(X|Y=Tail) = 5\times\frac{6-30}{36}=-\frac{10}{3}.$ 
 <p></p>
 So, by the tower property, $E(X) = P(X|Y=Head)\times P(Y=Head)+P(X|Y=Tail)\times P(Y=Tail) = \cdots.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -322,7 +327,7 @@ We have $E(X_i) = \frac{11+i}{2}.$
 So $E\left(\sum_1^N X_i|N\right) = \sum_1^N E(X_i|N) = \sum_1^N E(X_i) = \sum_1^N \frac{11+i}{2} = 5.5N+\frac{N(N+1)}{4}.$
 <p></p>
 By tower property, the required answer is $E\left(5.5N+\frac{N(N+1)}{4}\right)=\cdots.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -359,7 +364,7 @@ So tower property should provide the answer as
 $$
 E(X) = \sum E(E(I_i|Y_i)) = \cdots.
 $$
- ///
+ ■
 </p>
 
 <p></p>
@@ -410,7 +415,7 @@ name="Substitution">Substitution</a></h2>
 
 <fieldset>
 <legend><b><i>Substition property</i></b></legend>
-Conditional distribution of $f(X,Y)$ given $X=x$ if
+Conditional distribution of $f(X,Y)$ given $X=x$ is the
 same as the conditional distribution of $f(x,Y)$ given $X=x.$
 </fieldset>
 
@@ -423,62 +428,62 @@ This follows immediately from the definition of conditional probability.
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 
-<ol type="">
+<p></p>
 
-<li>
-<img width="" src="image/condist1.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/condist1.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist2.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/condist2.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist3.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/condist3.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist4.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/condist4.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist5.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/condist5.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist6.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/condist6.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist7.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/condist7.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist8.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/condist8.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist9.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/condist9.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist10.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/condist10.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist11.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/condist11.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/condist12.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/condist12.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond1.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/morecond1.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond2.png" style="vertical-align:text-top;">
+<p>
+<b>EXERCISE 14:</b>&nbsp;<img width="" src="image/morecond2.png" style="vertical-align:text-top;">
 Let $I_j$ be the indicator variable for whether there is a
 record at position $j.$ Then $P(I_j=1)$ may be computed
 by total probability:
@@ -487,96 +492,94 @@ P(I_j=1) = \sum_{k=j}^n P(X_j=k)P(I_j=1|X_j=k).
 $$
 Similarly for $P(I_jI_k=1).$
 <hr>
-</li>
+</p>
 
-<li>
-<img width="" src="image/morecond3.png" style="vertical-align:text-top;">
+<p>
+<b>EXERCISE 15:</b>&nbsp;<img width="" src="image/morecond3.png" style="vertical-align:text-top;">
 The problem is basically optimising $\sum P_i^2$ subject
 to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  
 <hr>
-</li>
+</p>
 
-<li>
-<img width="" src="image/morecond4.png" style="vertical-align:text-top;"><p></p>This problem (from Ross)
+<p>
+<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/morecond4.png" style="vertical-align:text-top;"><p></p>This problem (from Ross)
 refers to Example 2m. <a href="image/kirti1.png">Here is that example.</a>
 <hr>
-</li>
+</p>
 
-<li>
-<img width="" src="image/morecond5.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/morecond5.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond6.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/morecond6.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond7.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/morecond7.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond8.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/morecond8.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 21:</b>&nbsp;<img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 22:</b>&nbsp;<img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond11.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 23:</b>&nbsp;<img width="" src="image/morecond11.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 24:</b>&nbsp;<img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 25:</b>&nbsp;<img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 26:</b>&nbsp;<img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 27:</b>&nbsp;<img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 28:</b>&nbsp;<img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 29:</b>&nbsp;<img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 30:</b>&nbsp;<img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
+</p>
 
 <p></p>
 
-<li>
-<img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 31:</b>&nbsp;<img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 32:</b>&nbsp;<img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond21.png" style="vertical-align:text-top;"><hr>
-</li>
+<p>
+<b>EXERCISE 33:</b>&nbsp;<img width="" src="image/morecond21.png" style="vertical-align:text-top;"><hr>
+</p>
 
-<li>
-<img width="" src="image/morecond22.png" style="vertical-align:text-top;"><hr>
-</li>
-
-</ol>
+<p>
+<b>EXERCISE 34:</b>&nbsp;<img width="" src="image/morecond22.png" style="vertical-align:text-top;"><hr>
+</p>
 
 <hr/>
 <table width="100%" border="0">
