--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -2053,7 +2053,7 @@ drawn at stage $m$ is green and the ball drawn at
 stage $n$ is red? Does the answer depend on $m$ and $n$?
 <p><a
 href="javascript:hideShow('lab48')"><b>Hint:</b></a><div
-class="ans" id="lab48"></div></p>
+class="ans" id="lab48">Proceed just as in the last problem.</div></p>
 
 </p>
 
