--- a/prob1_2024/joint.html
+++ b/prob1_2024/joint.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -72,13 +72,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,6 +101,7 @@ body {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -287,7 +292,7 @@ Now $F(a_n,b_n)\equiv 0,$ and so $F(a_n,b_n)\rightarrow 0.$
 
 <p></p>
 But $F\left(\frac 12,1\right) = \frac 12\neq 0.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -517,7 +522,7 @@ If $X,Y,Z$ are independent random variables, then
 $$
 P(X^2+Y^2 \leq 4~\&amp;~ Z\neq 5) = P(X^2+Y^2 \leq 4)P(Z\neq 5).
 $$
- ///
+ ■
 </p>
 
 <p></p>
@@ -692,7 +697,7 @@ $cov(aX+b,cY+d) = ac cov(X,Y).$
 The analog of $(a+b)^2 = a^2+2ab+b^2$ here is $V(X+Y) =
 V(X)+2 cov(X,Y) +V(Y).$ This also shows that if $X,Y$ are
 independent, then $V(X+Y) = V(X)+V(Y).$
- ///
+ ■
 </p>
 
 <p></p>
@@ -758,10 +763,10 @@ if $X,Y$ are linearly linearly related with probability 1,
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 
-<ol type="">
+<p></p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 1:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most45.png"></th>
@@ -771,10 +776,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 2:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt1.png"></th>
@@ -784,10 +789,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 3:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt2.png"></th>
@@ -797,10 +802,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 4:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt3.png"></th>
@@ -810,10 +815,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 5:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt4.png"></th>
@@ -823,10 +828,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt5.png"></th>
@@ -836,10 +841,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt6.png"></th>
@@ -849,10 +854,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt7.png"></th>
@@ -862,10 +867,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt8.png"></th>
@@ -875,10 +880,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 10:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt9.png"></th>
@@ -888,10 +893,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 11:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt10.png"></th>
@@ -901,10 +906,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 12:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt11.png"></th>
@@ -914,10 +919,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt12.png"></th>
@@ -927,10 +932,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt13.png"></th>
@@ -940,10 +945,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt14.png"></th>
@@ -953,10 +958,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt15.png"></th>
@@ -966,10 +971,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt16.png"></th>
@@ -979,10 +984,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt17.png"></th>
@@ -992,10 +997,10 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt18.png"></th>
@@ -1005,11 +1010,9 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
 <p></p>
-
-</ol>
 
 <h3>Comments</h3>
 To post an anonymous comment, click on the "Name" field. This
