--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -974,7 +974,7 @@ if the set is bounded above, and $\infty$  otherwise.
 name="General case">General case</a></h2>
 Finally, we attack the general case, where $X $ can take both positive and negative values. 
 Here we apply our approach to the positive and the negative parts separately.  More precisely, we define 
-$$X_+ = \max\{X,0\} \mbox{ and } X_- = -\max\{-X,0\}.$$
+$$X_+ = \max\{X,0\} \mbox{ and } X_- = \max\{-X,0\}.$$
 Note that
 <ul>
 <li>Both $X_+$  and $X_-$  are nonnegative,</li>
