--- a/prob1_2024/joint.html
+++ b/prob1_2024/joint.html
@@ -702,10 +702,46 @@ independent, then $V(X+Y) = V(X)+V(Y).$
 
 <p></p>
 
+<p>
+<b>EXERCISE 1:</b>&nbsp;
+If $X$ and $Y$ have finite first moments, and at least one of them  is a degenerate random variable, then show
+ that $cov(X,Y)=0.$  
+</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 2:</b>&nbsp;Let $X_1,X_2,...,X_n$  be identically distributed independent random variables with $V(X_1) = \sigma^2 &lt; \infty.$  Then what is 
+$V(\overline X_n)?$  Here $\overline X_n = \frac 1n\sum_1^n X_i.$
+</p>
+
+<p></p>
+At last we shall be able to prove our first theorem about
+statistical regularity. This is essentially what we had started
+our class with.
+<p></p>
+
 <fieldset>
-<legend><b><i>Theorem</i></b></legend>
-If $X$ or $Y$ is a degenerate random variable, then $cov(X,Y)=0.$
+<legend><b><i>Weak Law of Large Numbers (WLLN)</i></b></legend>
+Let $X_1,X_2,...$ be a sequence of independent and
+identically distributed (IID) random variables (defined
+on the same probability space) with $E(X_1)=\mu$ and
+$V(X_1)=\sigma^2&lt;\infty.$ Let, for $n\in{\mathbb N}$, 
+$$
+\overline X_n = \frac 1n\sum_{i=1}^n X_i.
+$$
+Then 
+$$
+\forall \epsilon &gt; 0~~ P(|\overline X_n-\mu|&gt; \epsilon) \rightarrow
+0\mbox{ as } n\rightarrow \infty.
+$$
 </fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Use the exercise above and Chebyshev inequality.
+<b><i>[QED]</i></b>
+</p>
 
 <p></p>
 
@@ -766,7 +802,7 @@ name="Problems for practice">Problems for practice</a></h1>
 <p></p>
 
 <p>
-<b>EXERCISE 1:</b>&nbsp;<center>
+<b>EXERCISE 3:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most45.png"></th>
@@ -779,7 +815,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 2:</b>&nbsp;<center>
+<b>EXERCISE 4:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt1.png"></th>
@@ -792,7 +828,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;<center>
+<b>EXERCISE 5:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt2.png"></th>
@@ -805,7 +841,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 4:</b>&nbsp;<center>
+<b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt3.png"></th>
@@ -818,7 +854,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt4.png"></th>
@@ -831,7 +867,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt5.png"></th>
@@ -844,7 +880,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt6.png"></th>
@@ -857,7 +893,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 10:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt7.png"></th>
@@ -870,7 +906,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;<center>
+<b>EXERCISE 11:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt8.png"></th>
@@ -883,7 +919,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt9.png"></th>
@@ -896,7 +932,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt10.png"></th>
@@ -909,7 +945,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt11.png"></th>
@@ -922,7 +958,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt12.png"></th>
@@ -935,7 +971,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt13.png"></th>
@@ -948,7 +984,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt14.png"></th>
@@ -961,7 +997,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;<center>
+<b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt15.png"></th>
@@ -974,7 +1010,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;<center>
+<b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt16.png"></th>
@@ -987,7 +1023,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;<center>
+<b>EXERCISE 20:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt17.png"></th>
@@ -1000,7 +1036,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;<center>
+<b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt18.png"></th>
