--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1066,7 +1066,7 @@ $$\forall L'&lt; L~~\exists U\in{\mathcal D}~~E(U)&gt; L'.$$
 <p></p>
 Let $U_n$  be the random variable 
 $$
-U =\left\{\begin{array}{ll}X&\text{if }X=x_1,...,x_n\\ 0&\text{otherwise.}\end{array}\right..
+U_n =\left\{\begin{array}{ll}X&\text{if }X=x_1,...,x_n\\ 0&\text{otherwise.}\end{array}\right..
 $$  
 Then $U_n$  is a simple random variable such that $U_n\leq X.$ 
 <p></p>
@@ -1150,8 +1150,11 @@ then $E(h(X))=\infty $(resp, $-\infty$).
 If $X$ takes only finitely many values, then the result
 follows from distributivity of multiplication over addition. 
 <p></p>
-For the countably infinite case, the result follows from rearrangement
-property of absolutely convergent series. 
+If $X $ takes countably infinitely many values, and $h(X)$  is non-negative, then define 
+$$
+U_n =\left\{\begin{array}{ll}h(X)&\text{if }X=x_1,...,x_n\\ 0&\text{otherwise.}\end{array}\right.
+$$  
+and proceed as for the proof of $E(X)=\sum p_i x_i.$ 
 <b><i>[QED]</i></b>
 </p>
 
