--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -431,7 +431,10 @@ name="Problems for practice">Problems for practice</a></h1>
 <p></p>
 
 <p>
-<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/condist1.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/condist1.png" style="vertical-align:text-top;">
+<p></p>
+Here the word "density" is used to mean "PMF". 
+<hr>
 </p>
 
 <p>
