--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -1316,12 +1316,13 @@ class="ans" id="lab16">$\frac 12.$</div></p>
 <p><a
 href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
 class="ans" id="lab17">$P($ exactly 2 white$)=\frac 13\times\frac 23\times\frac 34+\frac 13\times\frac 13\times\frac 14+
-\frac 23\times\frac 23\times\frac 14=\frac{11}{36}$</div></p>
-
+\frac 23\times\frac 23\times\frac 14=\frac{11}{36}$
 <p></p>
 $P($ exactly 2 white and white from $A$$)=\frac 13\times\frac 23\times\frac 34+\frac 13\times\frac 13\times\frac 14=\frac{7}{36}.$
 <p></p>
 So the required conditional probability is $\frac{7}{11}.$ 
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 22:</b>&nbsp;<center>
