--- a/prob1_2024/distrib1.html
+++ b/prob1_2024/distrib1.html
@@ -277,9 +277,9 @@ following probabilities.
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1"><ol>
 <li>$\frac15$
 </li>
 <li>$\frac15$
@@ -292,9 +292,9 @@ following probabilities.
 </li>
 <li>$\frac45$
 </li>
-</ol>
+</ol></div></p>
 
-<p></p>
+</p>
 
 <p>
 <b>EXERCISE 2:</b>&nbsp;
@@ -311,9 +311,9 @@ following probabilities.
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2"><ol>
 <li>$\frac25$
 </li>
 <li>$0$
@@ -322,9 +322,9 @@ following probabilities.
 </li>
 <li>$\frac45$
 </li>
-</ol>
+</ol></div></p>
 
-<p></p>
+</p>
 
 <p>
 <b>EXERCISE 3:</b>&nbsp;
@@ -352,22 +352,21 @@ $$
 </li>
 </ol>
 
-</p>
-
-<p>
-<b>Hint:</b>
-<blockquote>A deck has 52 cards: 13 of them are hearts, 13 are
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">A deck has 52 cards: 13 of them are hearts, 13 are
 diamonds, 13 clubs and 13 spades. When you pick the top card of a
 well-shuffled deck any of the 52 cards are equally likely to occur.
-</blockquote>
-</p>
+<p></p>
 
 <ol>
 <li>
 <b>DUnif</b>$\{1,2,3,4\}.$</li>
 <li>
 <b>DUnif</b>$\{0,1\}.$</li>
-</ol> 
+</ol></div></p> 
+
+</p>
 
 <b>Expectation and variance:</b>
 If $X\sim$<b>DUnif</b>$\{x_1,x_2,...,x_n\}$ then 
@@ -416,8 +415,12 @@ If $Y$ has <b>DUnif</b>$\{0,1,...,n\}$ distribution, then compute
 $E(Y)$ and $Var(Y).$ But before you start algebraic
 manipulations, think if $E(X)$ and $Var(X)$ should be
 less, equal or more than what we obtained above.
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">\frac{n}2,\frac{n(n+2)}{12}.</div></p>
+
 </p>
-\frac{n}2,\frac{n(n+2)}{12}.
+
 <h2><a
 name="Bernoulli">Bernoulli</a></h2>
 
@@ -621,8 +624,12 @@ which is the binomial PMF.
 List all the possible outcomes of $n=4$ tosses having exactly
 $x=2$ heads. For example, one possible outcome is $HTHT.$ How
 many such outcomes are there?
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">HHTT,HTHT,HTTH,THHT,THTH,TTHH. There are 6.</div></p>
+
 </p>
-HHTT,HTHT,HTTH,THHT,THTH,TTHH. There are 6.
+
 <p></p>
 
 <p>
@@ -657,8 +664,9 @@ probabilities.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6"><ol>
 <li>$\frac1{81}$
 </li>
 <li>$\frac{16}{81}$
@@ -667,7 +675,8 @@ probabilities.
 </li>
 <li>$\frac{55}{81}$
 </li>
-</ol>
+</ol></div></p>
+</p>
 
 <p></p>
 
@@ -685,8 +694,9 @@ $Z\sim$<b>Bin</b>$(5,\frac12).$ Find the following.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7"><ol>
 <li>$\frac12$
 </li>
 <li>$0$
@@ -695,7 +705,8 @@ $Z\sim$<b>Bin</b>$(5,\frac12).$ Find the following.
 </li>
 <li>$0$
 </li>
-</ol>
+</ol></div></p>
+</p>
 
 <p></p>
 
@@ -705,16 +716,17 @@ If $X$ has <b>Bin</b>$(100,0.5)$ distribution. Then find $a\neq37$ such
 that $$
 P(X=a) = P(X = 37).
 $$
-</p>$a=100-37=63.$
-<p>
-<b>Hint:</b>
-<blockquote>Notice that for any $n$ the <b>Bin</b>$(n,0.5)$
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">$a=100-37=63.$
+<p></p>
+Notice that for any $n$ the <b>Bin</b>$(n,0.5)$
 distribution is 
 symmetric, <i>i.e.</i>, $$\begin{eqnarray*}P(X=x) &amp;=&amp; {n\choose x}0.5^x(1-0.5)^{n-x}\\
 &amp; =&amp;{n\choose n-x}0.5^{n-x}(1-0.5)^x\\
 &amp; =&amp; P(X=n-x).
 \end{eqnarray*}$$
-</blockquote>
+</div></p>
 </p>
 
 <p>
@@ -740,7 +752,11 @@ the number of `1' s. Hence $X$ has <b>Bin</b>(6, 0.4) distribution.
 <b>EXERCISE 9:</b>&nbsp;
 In the above example let $Y$ be the number of girls. What is the
 distribution of $Y$? 
-</p>$Y\sim$<b>Bin</b>$(6,0.6).$
+<p><a
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">$Y\sim$<b>Bin</b>$(6,0.6).$</div></p>
+</p>
+
 <p></p>
 
 <p>
@@ -899,14 +915,13 @@ If $X_1,X_2$ and $X_3$ are independent random variables with
 <b>Bin</b>$(5,\frac13),$ <b>Bin</b>$(10,\frac13)$ and
 <b>Bin</b>$(6,\frac13)$ distributions, respectively.
 Find the distribution of $(X_1+X_2+X_3).$
-</p>$(X_1+X_2+X_3)\sim$<b>Bin</b>$(21,\frac13).$
-<p>
-<b>Hint:</b>
-<blockquote>First add $X_1$ and $X_2.$ Now notice that 
-$(X_1+X_2)$ is independent of $X_3.$</blockquote>
-</p>
-
+<p><a
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+class="ans" id="lab10">$(X_1+X_2+X_3)\sim$<b>Bin</b>$(21,\frac13).$
 <p></p>
+First add $X_1$ and $X_2.$ Now notice that 
+$(X_1+X_2)$ is independent of $X_3.$</div></p>
+</p>
 
 <h2><a
 name="Hypergeometric">Hypergeometric</a></h2>
@@ -1018,8 +1033,9 @@ probabilities.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+class="ans" id="lab11"><ol>
 <li>$\frac2{15}$
 </li>
 <li>$\frac8{15}$
@@ -1030,7 +1046,8 @@ probabilities.
 </li>
 <li>$\frac13$
 </li>
-</ol>
+</ol></div></p>
+</p>
 
 <p></p>
 
@@ -1042,14 +1059,14 @@ probabilities is larger and why?
 $$
 P(Y=10),\quad P(Z=30)
 $$
-</p>Equal.
-<p>
-<b>Hint:</b>
-<blockquote>Think of the following descriptions of $Y$ and
+<p><a
+href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+class="ans" id="lab12">Equal.
+Think of the following descriptions of $Y$ and
 $Z.$ In a box there are 100 balls, 30 of which are white, the
 remaining 70 being black. You pick 40 balls at random. $Y$ is the
 number of <i>white</i> balls that you get, and $Z$ is the number of
-<i>black</i> balls that you get.</blockquote>
+<i>black</i> balls that you get.</div></p>
 </p>
 
 <p>
@@ -1106,10 +1123,10 @@ $$\begin{eqnarray*}
 E(X(X-1)) &amp;=&amp; \sum_{x=0}^n x(x-1)P(X=x) \\
           &amp;=&amp; \sum_{x=0}^n x(x-1)\frac{{M \choose x}{N-M \choose n-x}}{{N
           \choose n}} \\
-	  &amp;=&amp; \frac1{{N \choose n}}M(M-2) \sum_{x=2}^n {M-2 \choose
+     &amp;=&amp; \frac1{{N \choose n}}M(M-2) \sum_{x=2}^n {M-2 \choose
           x-2}{N-M \choose n-x} \\
-	  &amp;=&amp; \frac1{{N \choose n}}M(M-2) {N-2 \choose n-2} \\
-	  &amp;=&amp; \frac{M(M-1)}{N(N-1)}n(n-1)
+     &amp;=&amp; \frac1{{N \choose n}}M(M-2) {N-2 \choose n-2} \\
+     &amp;=&amp; \frac{M(M-1)}{N(N-1)}n(n-1)
 \end{eqnarray*}$$
 <p></p>
 $$\begin{eqnarray*}
@@ -1139,9 +1156,11 @@ distribution with
 </li>
 </ol>
 
-</p>
+<p></p>
 
-<ol>
+<p><a
+href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+class="ans" id="lab13"><ol>
 <li>$3,\frac23.$
 </li>
 <li>$\frac{3}{10},\frac{459}{1900}.$
@@ -1150,9 +1169,9 @@ distribution with
 </li>
 <li>$15,0$
 </li>
-</ol>
+</ol></div></p>
 
-<p></p>
+</p>
 
 <h2><a
 name="Relation between binomial and hypergeometric">Relation between binomial and hypergeometric</a></h2>
@@ -1182,8 +1201,7 @@ as required.
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-Let $p\in (0,1).$ Let $N,M\rightarrow \infty $ so that $\frac{M
-N}\rightarrow p.$ Let $n,k\in{\mathbb N}$ be fixed. Then 
+Let $p\in (0,1).$ Let $N,M\rightarrow \infty $ so that $\frac MN\rightarrow p.$ Let $n,k\in{\mathbb N}$ be fixed. Then 
 $$
          \frac{\binom{M}{k} \binom{N-M}{n-k} }{ \binom{N}{n} } \rightarrow
          \binom{n}{k} p^k (1-p)^{n-k}.
@@ -1209,9 +1227,9 @@ So, since $n,k$ are fixed, we have
 $$
 \frac{ M(M-1)\cdots (M-k+1) }{N(N-1)\cdots (N-k+1) } \rightarrow p^k
 $$
-and
-<p></p>
-
+and similarly
+$$\frac{R(R-1)\cdots(R-r+1) }{ (N-k)\cdots (N-n+1)} \rightarrow (1-p)^{n-k}.$$
+Hence the result.
 <b><i>[QED]</i></b>
 </p>
 
