--- a/prob1_2024/joint.html
+++ b/prob1_2024/joint.html
@@ -701,16 +701,14 @@ independent, then $V(X+Y) = V(X)+V(Y).$
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;
 If $X$ and $Y$ have finite first moments, and at least one of them  is a degenerate random variable, then show
  that $cov(X,Y)=0.$  
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;Let $X_1,X_2,...,X_n$  be identically distributed independent random variables with $V(X_1) = \sigma^2 &lt; \infty.$  Then what is 
 $V(\overline X_n)?$  Here $\overline X_n = \frac 1n\sum_1^n X_i.$
 </p>
@@ -800,8 +798,7 @@ if $X,Y$ are linearly linearly related with probability 1,
 name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -813,8 +810,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -826,8 +822,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -839,8 +834,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -852,8 +846,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -865,8 +858,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -878,8 +870,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -891,8 +882,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 10:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -904,8 +894,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 11:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -917,8 +906,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 12:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -930,8 +918,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -943,8 +930,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -956,8 +942,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -969,8 +954,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -982,8 +966,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -995,8 +978,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1008,8 +990,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1021,8 +1002,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 20:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1033,9 +1013,28 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</p>
 
-<p>
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">
+Let $X=$ number of defective bolts in a random shipment. 
+<p></p>
+We want to choose $a$  such that $P(X&gt; a) &lt; 0.05.$
+<p></p>
+Here $X$  can take values 0,1,2,...,10000 with the probabilities
+$$P(X=k) = \binom{10000}{k} 0.05^k 0.95^{10000-k}=p_k,\mbox{ say.}$$
+The probability of refund is $\sum_{k&gt;a} p_k.$  
+<p></p>
+So $a$  needs to be chosen such that 
+$$\sum_{k&gt;a} p_k \leq 0.01 &lt;\sum_{k\geq a} p_k.$$
+Finding this $a$  is not easy by hand, though trivial using a computer. 
+<p></p>
+There is a theorem called the
+ Central Limit Theorem which allows a simple approximate way to find $a.$  We shall learn it in the next semester.
+</div></p>
+
+</p>
+::<p>
 <b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
