--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1448,11 +1448,22 @@ you rearrange the terms.
 <b>EXERCISE 11:</b>&nbsp;For a group of $n$  people find the expected number of days of the year which are
  birthdays of exactly $k$  people. (Assume 365 days and that all arrangements are equally
  probable.) Also find the expected number of multiple birthdays. How large should $n$  be to
- make this expectation exceed 1?</p>
+ make this expectation exceed 1?
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3"> Expected number of days of the year which are  birthdays of exactly $k$  people is $\binom{n}{k}\frac{364^{n-k}}{365^{n-1}}.$
+<p></p>
+Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\right)^n + \frac{n\times 364^{n-1}}{365^n}\right\}.$
+</div></p>
+
+</p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one keys works). He tries the
+<b>EXERCISE 12:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one key works). He tries the
  keys independently at random. Find the expected number of trials needed to open the door if 
- keys are tried (a) with replacement (b) without replacement.</p>
+ keys are tried (a) with replacement (b) without replacement.
+<p></p>
+
+</p>
 ::<p>
 <b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
@@ -1626,8 +1637,8 @@ You may use some approximations in parts (c) and (d) of this problem. For instam
  $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
  may also differentiate w.r.t. $k.$ 
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
-class="ans" id="lab3">(a) $1-(1-p)^k.$
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">(a) $1-(1-p)^k.$
 <p></p>
 (b) For a group of size $k$  the random variable $X$  takes the value 
 $k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
@@ -1675,8 +1686,8 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
-class="ans" id="lab4">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1728,8 +1739,8 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
-class="ans" id="lab5">
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">
 <center>
 <table width="100%">
 <tr>
