--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -862,14 +862,12 @@ $$
 </fieldset>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;A random variable $X$  takes the values $-2, -1, 0, 1 $  and $2$  with
  probabilities $p,q,1-2p-2q, p$  and $q,$  respectively. Find $E(X).$</p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;A random variable takes the values $1,2,...,10$  with probabilities
  $p_1,p_2,...,p_{10},$  respectively, where $\sum_i p_i = 1.$  Prove that $1\leq
  E(X)\leq 10.$  Also find $p_i$'s if $E(X) = 10.$  </p>
@@ -961,8 +959,7 @@ if the set is bounded above, and $\infty$  otherwise.
 </fieldset>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;Suppose $X$  is a nonnegative
  random variable that is also a simple random variable. Then we have two definitions of
  $E(X),$  as a simple random variable and as a non-empty random variable. Show that both
@@ -994,8 +991,7 @@ We shall say $E(X)$  is undefined if $E(X_+)=E(X_-)=\infty.$
 </fieldset>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;If $X$  is a nonnegative random variable, then we have two definitions for $E(X).$ 
  Check that they match.</p>
 
@@ -1084,14 +1080,12 @@ Since $E(U) &gt; L',$ this completes the proof.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;If $X$  takes the  values $x_1,x_2,...$  (not necessarily all nonnegative) with probabilities
  $p_1,p_2,...$  where $\sum p_i = 1$ and $\sum |p_i x_i|&lt;\infty,$ then 
 $$E(X) = \sum p_i x_i.$$
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;If $X$  takes the  values $x_1,x_2,...$  (not necessarily all nonnegative) with probabilities
  $p_1,p_2,...$  where $\sum p_i = 1$ and $\sum |p_i x_i|=\infty,$ then what are the possibilities for $E(X):$ 
  finite, $\infty$, $-\infty$  or undefined? Give one example of each of the possibilities. Prove the impossibility
@@ -1461,7 +1455,11 @@ Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\righ
 <b>EXERCISE 12:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one key works). He tries the
  keys independently at random. Find the expected number of trials needed to open the door if 
  keys are tried (a) with replacement (b) without replacement.
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">(a) $\sum_1^ \infty k\cdot \left(1-\frac 1n\right)^{k-1}\cdot\frac 1n = \cdots = n.$ 
 <p></p>
+ (b) $\sum_1^n \frac kn = \frac{n+1}{2}.$</div></p>
 
 </p>
 ::<p>
@@ -1475,6 +1473,14 @@ Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\righ
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">
+$P(X=i) = \frac{^5P_{i-1}\times 5\times (10-i)!}{10!}$  for $i=1,2,3,4,5,6.$  The probability is
+ 0 for $i=7,8,9,10.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 14:</b>&nbsp;<center>
@@ -1487,6 +1493,12 @@ Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\righ
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n.$  If $n$  is
+ odd, then all the odd values in the same range.</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 15:</b>&nbsp;<center>
@@ -1637,8 +1649,8 @@ You may use some approximations in parts (c) and (d) of this problem. For instam
  $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
  may also differentiate w.r.t. $k.$ 
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
-class="ans" id="lab4">(a) $1-(1-p)^k.$
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">(a) $1-(1-p)^k.$
 <p></p>
 (b) For a group of size $k$  the random variable $X$  takes the value 
 $k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
@@ -1686,8 +1698,8 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
-class="ans" id="lab5">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1739,8 +1751,8 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
-class="ans" id="lab6">
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">
 <center>
 <table width="100%">
 <tr>
