--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -237,6 +237,29 @@ $P(A)=P(B)=\frac 12$  and $P(A\cap B)=\frac 14.$  So we have independence.
 <p>
 <b>EXERCISE 2:</b>&nbsp;
 Same problem as above, but this time the coin is biased. Say, $P(H)=0.6.$  
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">
+Possible outcomes are still $HH, HT, TH$  and $TT.$  Let's work out the probabilities. 
+<p></p>
+$P(HH) = P($ first toss gives head, second toss is head$) = 0.6^2 = 0.36.$
+<p></p>
+$P(HT) = P($ first toss gives head, second toss gives tail$) = 0.6\times(1-0.6) = 0.24.$
+<p></p>
+$P(TH) = P($ first toss gives tail, second toss gives tail$) = (1-0.6)^2 = 0.16.$
+<p></p>
+$P(TT) = P($ first toss gives tail, second toss gives head$) = (1-0.6)\times 0.6 = 0.24.$
+<p></p>
+So $P(A) = P(\{HH, HT\}) = 0.36+0.24 = 0.6.$
+<p></p>
+$P(B) = P(\{HH, TH\}) = 0.36+0.16 = 0.52.$
+<p></p>
+Now 
+$P(A\cap B) = P(HH) = 0.36 \neq P(A)P(B).$
+<p></p>
+So $A,B$  are not independent.
+</div></p>
+
 </p>
 
 <p></p>
@@ -477,8 +500,8 @@ name="Problems for practice">Problems for practice</a></h1>
 </center>
 
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
-class="ans" id="lab1">
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">
 Let $f = P($Elmer beats father$),$ and $c =
 P($Elmer beats champion$).$ Then Elmer's chance of
 winning for the father-champion-father case is $2fc(1-f) 
@@ -511,8 +534,8 @@ So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 </center>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
-class="ans" id="lab2">
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">
 Let $A,B$ and $C$, respecively, be the probabilities
 that the first, second and third man in the three man jury  
 reaches the correct conclusion. Then $P(A)=P(B)=p$
@@ -543,8 +566,8 @@ So both the jury are equally likely to reach the correct decision.
 </center>
 
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
-class="ans" id="lab3">
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">
 $2^{-100}{100 \choose 50}\approx 0.08.$
 </div></p>
 
